kubernetes-manifests/stars.celery.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stars-celery
  namespace: stars
  labels:
    app: stars-celery
    tier: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stars-celery
      tier: queue
  template:
    metadata:
      labels:
        app: stars-celery
        tier: queue
    spec:
      containers:
      - name: stars-celery
        image: gcr.io/aashe-migration/stars-image:BUILD_ID
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
