kubernetes-manifests/stars.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stars
  labels:
    app: stars
    tier: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stars
      tier: app
  template:
    metadata:
      labels:
        app: stars
        tier: app
    spec:
      containers:
      - name: stars
        image: gcr.io/aashe-migration/stars-image:b6fd3668-deac-4700-8100-f7dda1c6540a
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
