kubernetes-manifests/stars.celery.ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: stars-celery-service
  labels:
    app: stars-celery-service
spec:
  ports:
  - port: 80
    name: stars-celery-service
  clusterIP: None
  selector:
    app: stars-celery
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stars-celery
spec:
    serviceName: "stars-celery-service"
    replicas: 2
    selector:
      matchLabels:
        app: stars-celery
    template:
      metadata:
        labels:
          app: stars-celery
      spec:
        containers:
        - name: stars-celery
          image: gcr.io/aashe-migration/stars-image:BUILD_ID
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: stars-celery
            mountPath: /usr/share
    volumeClaimTemplates:
    - metadata:
        name: stars-celery
      spec:
        accessModes: [ "ReadWriteOnce"]
        resources:
            requests:
                storage: 2Gi
