kubernetes-manifests/stars.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stars-external
  labels:
    app: stars
    tier: app
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
    - 206.125.141.57/32
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: stars
    tier: app
